--- a/SignUp.css
+++ b/SignUp.css
@@ -3,12 +3,18 @@ main {
     width: 50%;
     margin: auto;
     padding: 100px 10px 20px;
-    color: #282828;
+    color: #0651c9;
 }
 
+h1 {
+	font-family: Algerian;
+	font-size: 44px;
+	color: #666666;
+}
 /* Full-width input fields */
 input[type=text],
-input[type=password] {
+input[type=password],
+input[type=date] {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -18,7 +24,8 @@ input[type=password] {
 }
 
 input[type=text]:focus,
-input[type=password]:focus {
+input[type=password]:focus,
+input[type=date]:focus{
     background-color: #ddd;
     outline: none;
 }
@@ -37,7 +44,7 @@ button {
     border: none;
     cursor: pointer;
     width: 100%;
-    opacity: 0.9;
+    opacity: 0.8;
 }
 
 button:hover {
@@ -46,7 +53,6 @@ button:hover {
 
 /* Extra styles for the cancel button */
 .cancelbtn {
-    padding: 14px 20px;
     background-color: #f44336;
 }
 
@@ -59,7 +65,7 @@ button:hover {
 
 /* Add padding to container elements */
 .container {
-    padding: 16px;
+    padding: 36px;
 }
 
 /* Clear floats */
@@ -68,3 +74,39 @@ button:hover {
     clear: both;
     display: table;
 }
+
+.limiter {
+  width: 100%;
+  margin: 0 auto;
+}
+.container-signUp {
+  width: 100%;  
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+  background-image: linear-gradient(to top, #dbdcd7 0%, #dddcd7 24%, #e2c9cc 30%, #e7627d 46%, #b8235a 59%, #801357 71%, #3d1635 84%, #1c1a27 100%);
+}
+.wrap-login100 {
+  margin : auto;
+  width: 730px;
+  background: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 177px 130px 33px 95px;
+}
+
